2003-01-22  David Hyatt  <hyatt@apple.com>

	Fix for 3153316, selection busted on google.com.  For now keep
	mouse events grabbing the absolutePosition of elements, and don't
	ever let them grab the absolutePosition of text nodes.
	
        Reviewed by john.

        * khtml/khtml_events.cpp:
        (khtml::MouseEvent::MouseEvent):
        
2003-01-22  Chris Blumenberg  <cblu@apple.com>

	Renamed isPointSelected to isPointInsideSelection because it's a better name.

        Reviewed by darin.

        * khtml/khtml_part.cpp:
        (KHTMLPart::isPointInsideSelection): 
        (KHTMLPart::khtmlMousePressEvent):
        * khtml/khtml_part.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge elementAtPoint:]):

2003-01-21  Chris Blumenberg  <cblu@apple.com>

	Added support for text dragging.

        Reviewed by dave.

        * khtml/khtml_events.cpp:
        (khtml::MouseEvent::offset): made checkSelectionPoint take x,y coords, passing the whole event is unnecessary
        * khtml/khtml_part.cpp:
        (KHTMLPart::isPointSelected): new
        (KHTMLPart::khtmlMousePressEvent): don't restart the selection when click was on the selection
        (KHTMLPart::khtmlMouseMoveEvent): restart the selection since we may not do it in khtmlMousePressEvent
        (KHTMLPart::khtmlMouseReleaseEvent): clear the selection if no selection took place
        * khtml/khtml_part.h:
        * khtml/khtmlpart_p.h:
        * khtml/rendering/render_object.cpp:
        (RenderObject::checkSelectionPoint): made checkSelectionPoint take x,y coords, passing the whole event is unnecessary
        * khtml/rendering/render_object.h:
        * khtml/rendering/render_text.cpp:
        (RenderText::checkSelectionPoint): made checkSelectionPoint take x,y coords, passing the whole event is unnecessary
        * khtml/rendering/render_text.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::khtmlMousePressEvent): set booleans indicating that it is OK to drag or select